<resources>
    <string name="app_name">SALINAPP SERVICE</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="usuario">Usuario:</string>
    <string name="inciar_sesion">INCIAR SESIÓN</string>
    <string name="contraseña">Contraseña:</string>
    <string name="registrarse">REGISTRARSE</string>
    <string name="confirmar_registro">CONFIRMAR REGISTRO</string>
    <string name="reg_strate">¡Regístrate!</string>
    <string name="no_tienes_una_cuenta">¿No tienes una cuenta?</string>
    <string name="inicio">INICIO</string>
    <string name="has_olvidado_tu_contrase_a">¿Has olvidado tu contraseña?</string>
    <string name="google">Google</string>
    <string name="facebook">Facebook</string>
    <string name="cerrar_sesion">CERRAR SESIÓN</string>
    <string name="registro">REGISTRO</string>
    <string name="mi_cuenta">MI CUENTA</string>
    <string name="salinapps_service">SalinApps Service</string>
    <string name="pulsa_el_siguiente_bot_n_para_acceder_al_chat">Pulsa el siguiente botón para acceder al chat</string>
    <string name="cuenta_inactiva">CUENTA INACTIVA</string>
    <string name="entrar_al_chat">Entrar al chat</string>
    <string name="pulsa_aqu_para_activar_tu_cuenta">Pulsa aquí para activar tu cuenta</string>
    <string name="aseg_rate_de_tener_tu_cuenta_activa">Asegúrate de tener tu cuenta activa</string>
    <string name="recuperar">recuperar</string>
    <string name="restaurar_contrase_a">RESTAURAR CONTRASEÑA</string>
    <string name="por_favor_escribe_tu_usuario">Por favor, escribe tu correo:</string>
    <string name="confirmar_contraseña">Confirmar contraseña:</string>
    <string name="enviar">Enviar</string>
    <string name="escriba_un_mensaje">Escriba un mensaje</string>
    <string name="dani">Dani</string>
    <string name="enviarimagen">enviarImagen</string>
    <string name="confirmar_registro_de_usuario">REGISTRAR</string>
    <string name="confirmar_registro_de_empresa">CONFIRMAR REGISTRO DE EMPRESA</string>
    <string name="email">Email:</string>
    <string name="nombre">Nombre:</string>
    <string name="bienvenid_a_nuestra_app">¡BIENVENID@ A NUESTRA APP!</string>
    <string name="loginUsuarios">Usuarios</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="salir_de_la_cuenta">Salir de la cuenta</string>
    <string name="volver_a_la_ventana_principal">Volver a la ventana principal</string>
    <string name="iniciar_sesi_n">Iniciar sesión</string>
    <string name="galer_a_usuarios">GALERÍA USUARIOS</string>
    <string name="usuarios">USUARIOS</string>
    <string name="slideshow_usuarios">SLIDESHOW USUARIOS</string>
    <string name="galer_a_empresas">GALERÍA EMPRESAS</string>
    <string name="slideshow_empresas">SLIDESHOW EMPRESAS</string>
    <string name="ajustes">Ajustes</string>
    <string name="editar_mi_informaci_n">EDITAR MI INFORMACIÓN</string>

    <string name="txt_titulo_editInfoE">EDITAR INFORMACIÓN</string>
    <string name="edt_nombre_editInfoE">Nombre</string>
    <string name="edt_direccion_editInfoE">Dirección</string>
    <string name="edt_CIF_editInfoE">CIF</string>
    <string name="edt_sector_editInfoE">Sector</string>
    <string name="edt_resumen_editInfoE">Resumen</string>
    <string name="edt_codEmpr_editInfoE">Codigo empresa</string>
    <string name="btn_editar_editInfoE">Editar información</string>

    <string name="descripcion_img_producto_publicado">descripcion_img_producto_publicado</string>
    <string name="categoria">categoria</string>
    <string name="marca">marca</string>
    <string name="precio">precio</string>
    <string name="stock">stock</string>
    <string name="descripcion">descripcion</string>
    <string name="todo3">todo3</string>
    <string name="descripcion_img_empresa">descripcion_img_empresa</string>
    <string name="cod_empresa">cod_empresa</string>
    <string name="clave_empresa">clave_empresa</string>
    <string name="datos_empresa">datos_empresa</string>
    <string name="hello_blank_fragment2">hello_blank_fragment</string>
    <string name="img_empresa">img_empresa</string>
    <string name="img_producto_publicado">img_producto_publicado</string>
    <string name="aqui_van_los_productos_de_una_empresa">aqui van los productos de una empresa</string>
    <string name="atras">ATRÁS</string>
    <string name="modelo">modelo</string>
    <string name="direccion_empresa">direccion_empresa</string>
    <string name="producto">producto</string>
    <string name="modelo2">Modelo</string>
    <string name="marca2">Marca</string>
    <string name="precio2">Precio</string>
    <string name="cantidad2">Cantidad</string>
    <string name="descripcion2">Descripción</string>
    <string name="galer_a_de_productos">GALERÍA DE PRODUCTOS</string>
    <string name="pedidos">PEDIDOS</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="lista_de_empresas">LISTA DE EMPRESAS</string>
    <string name="lista_de_productos_publicados">LISTA DE PRODUCTOS PUBLICADOS</string>
    <string name="detalles_del_producto">DETALLES DEL PRODUCTO</string>
    <string name="resumen">Resumen</string>
    <string name="sector">Sector</string>
    <string name="imagencarrito">imagenCarrito</string>
    <string name="buscar">Buscar…</string>

    <string name="imagenbuscar">imagenbuscar</string>

    <string name="nav_camara">CÁMARA</string>

    <string name="añadir_al_carrito">Añadir al carrito</string>
    <string name="editar_informacion">EDITAR INFORMACIÓN</string>
    <string name="carrito">CARRITO</string>
    <string name="productos_publicados">PRODUCTOS PUBLICADOS</string>
    <string name="empresas">EMPRESAS</string>
    <string name="unidades_deseadas">Unidades deseadas…</string>
    <string name="crear_reserva">CREAR RESERVA</string>
    <string name="img_producto_carrito">img_producto_carrito</string>
    <string name="descripci_n_producto_carrito">Descripción producto carrito</string>
    <string name="marca_producto_carrito">Marca producto carrito</string>
    <string name="cantidad_producto_carrito">Cantidad producto carrito</string>
    <string name="precio_producto_carrito">Precio producto carrito</string>

    <string name="reservas">RESERVAS</string>

    <string name="btn_guardar_fdipp">GUARDAR</string>
    <string name="btnGuardar_fdgipp">GUARDAR</string>


    <string name="edt_localizacion_editInfoE">Localización</string>
    <string name="disminuir_cantidad">Disminuir cantidad</string>
    <string name="aumentar_cantidad">Aumentar cantidad</string>
    <string name="completar_perfil">COMPLETAR PERFIL</string>
    <string name="completar_informaci_n_de_usuario">COMPLETAR INFORMACIÓN DE USUARIO</string>
    <string name="apellidos">Apellidos:</string>
    <string name="calle">Calle:</string>
    <string name="n_mero">Número:</string>
    <string name="localidad">Localidad:</string>
    <string name="c_digo_postal">Código postal:</string>
    <string name="provincia">Provincia:</string>
    <string name="completar_informaci_n">COMPLETAR INFORMACIÓN</string>
    <string name="cancelar_reserva">Cancelar reserva</string>
    <string name="autoFillHints">autofillHints</string>
</resources>