<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UI.CompletarPerfilUsuarioFragment" >

    <TextView
        android:id="@+id/textView19"
        android:layout_width="394dp"
        android:layout_height="68dp"
        android:layout_margin="10sp"
        android:text="@string/completar_informaci_n_de_usuario"
        android:textAlignment="center"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edtNombreUsuario"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/style_edt"
        android:hint="@string/nombre"
        android:inputType="text"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.508"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView19" />

    <EditText
        android:id="@+id/edtApellidosUsuario"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:background="@drawable/style_edt"
        android:hint="@string/apellidos"
        android:inputType="text"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        app:layout_constraintEnd_toEndOf="@+id/edtNombreUsuario"
        app:layout_constraintStart_toStartOf="@+id/edtNombreUsuario"
        app:layout_constraintTop_toBottomOf="@+id/edtNombreUsuario" />

    <EditText
        android:id="@+id/edtCalleUsuario"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:background="@drawable/style_edt"
        android:hint="@string/calle"
        android:inputType="text"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        app:layout_constraintEnd_toEndOf="@+id/edtApellidosUsuario"
        app:layout_constraintStart_toStartOf="@+id/edtApellidosUsuario"
        app:layout_constraintTop_toBottomOf="@+id/edtApellidosUsuario" />

    <EditText
        android:id="@+id/edtNúmeroUsuario"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:background="@drawable/style_edt"
        android:hint="@string/n_mero"
        android:inputType="number"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        app:layout_constraintEnd_toEndOf="@+id/edtCalleUsuario"
        app:layout_constraintStart_toStartOf="@+id/edtCalleUsuario"
        app:layout_constraintTop_toBottomOf="@+id/edtCalleUsuario" />

    <EditText
        android:id="@+id/edtProvinciaUsuario"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:background="@drawable/style_edt"
        android:hint="@string/provincia"
        android:inputType="text"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        app:layout_constraintEnd_toEndOf="@+id/edtNúmeroUsuario"
        app:layout_constraintStart_toStartOf="@+id/edtNúmeroUsuario"
        app:layout_constraintTop_toBottomOf="@+id/edtNúmeroUsuario" />

    <EditText
        android:id="@+id/edtLocalidadUsuario"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:background="@drawable/style_edt"
        android:hint="@string/localidad"
        android:inputType="text"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        app:layout_constraintEnd_toEndOf="@+id/edtProvinciaUsuario"
        app:layout_constraintStart_toStartOf="@+id/edtProvinciaUsuario"
        app:layout_constraintTop_toBottomOf="@+id/edtProvinciaUsuario" />

    <EditText
        android:id="@+id/edtCPUsuario"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:background="@drawable/style_edt"
        android:hint="@string/c_digo_postal"
        android:inputType="number"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        app:layout_constraintEnd_toEndOf="@+id/edtLocalidadUsuario"
        app:layout_constraintStart_toStartOf="@+id/edtLocalidadUsuario"
        app:layout_constraintTop_toBottomOf="@+id/edtLocalidadUsuario" />

    <Button
        android:id="@+id/btCompletraInformaciónUsuario"
        android:layout_width="350dp"
        android:layout_height="55dp"
        android:layout_marginTop="24dp"
        android:text="@string/completar_informaci_n"
        android:textColor="@color/black"
        app:cornerRadius="25dip"
        app:layout_constraintEnd_toEndOf="@+id/edtCPUsuario"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/edtCPUsuario"
        app:layout_constraintTop_toBottomOf="@+id/edtCPUsuario" />

</androidx.constraintlayout.widget.ConstraintLayout>